mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_invalid_map_key.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: Map keys must be a hashable type, found 'list<?>'
--> test_scripts/error_cases/parser_invalid_map_key.mux:2:11
   |
 2 | auto m = {[]: 1}
   |           ^
   |
= help: Only primitive types (int, float, string, bool, char) can be used as map keys
